Set compiler versions

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -17,6 +17,11 @@ c_compiler:
   - vs2008                     # [win]
   - vs2015                     # [win]
   - vs2015                     # [win]
+c_compiler_version:            # [unix]
+  - 2                          # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
+  - 4                          # [osx]
+  - 7                          # [linux64]
+  - 8                          # [aarch64 or ppc64le]
 cxx_compiler:
   # legacy compilers for things that refuse to move
   - toolchain_cxx              # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
@@ -30,16 +35,22 @@ cxx_compiler:
   - vs2008                     # [win]
   - vs2015                     # [win]
   - vs2015                     # [win]
+cxx_compiler_version:          # [unix]
+  - 2                          # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
+  - 4                          # [osx]
+  - 7                          # [linux64]
+  - 8                          # [aarch64 or ppc64le]
 fortran_compiler:              # [unix or win64]
   - toolchain_fort             # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
   - gfortran                   # [(linux64 or osx)]
-
   - gfortran                   # [aarch64 or ppc64le]
-
   - flang                      # [win64]
-fortran_compiler_version:      # [osx]
-  - 2                          # [osx and (environ.get('CF_COMPILER_STACK') == 'comp4')]
+fortran_compiler_version:      # [unix or win64]
+  - 2                          # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
   - 4                          # [osx]
+  - 7                          # [linux64]
+  - 8                          # [aarch64 or ppc64le]
+  - 5                          # [win64]
 m2w64_c_compiler:              # [win]
   - m2w64-toolchain            # [win]
 m2w64_cxx_compiler:            # [win]
