Fix compiler version

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -20,8 +20,8 @@ c_compiler:
 c_compiler_version:            # [unix]
   - 2                          # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
   - 4                          # [osx]
-  - 7                          # [linux64]
-  - 8                          # [aarch64 or ppc64le]
+  - 7                          # [linux64 or aarch64]
+  - 8                          # [ppc64le]
 cxx_compiler:
   # legacy compilers for things that refuse to move
   - toolchain_cxx              # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
@@ -38,8 +38,8 @@ cxx_compiler:
 cxx_compiler_version:          # [unix]
   - 2                          # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
   - 4                          # [osx]
-  - 7                          # [linux64]
-  - 8                          # [aarch64 or ppc64le]
+  - 7                          # [linux64 or aarch64]
+  - 8                          # [ppc64le]
 fortran_compiler:              # [unix or win64]
   - toolchain_fort             # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
   - gfortran                   # [(linux64 or osx)]
@@ -48,8 +48,8 @@ fortran_compiler:              # [unix or win64]
 fortran_compiler_version:      # [unix or win64]
   - 2                          # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
   - 4                          # [osx]
-  - 7                          # [linux64]
-  - 8                          # [aarch64 or ppc64le]
+  - 7                          # [linux64 or aarch64]
+  - 8                          # [ppc64le]
   - 5                          # [win64]
 m2w64_c_compiler:              # [win]
   - m2w64-toolchain            # [win]
