Use NMake instead of visual studio generator

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -57,6 +57,8 @@ m2w64_cxx_compiler:            # [win]
   - m2w64-toolchain            # [win]
 m2w64_fortran_compiler:        # [win]
   - m2w64-toolchain            # [win]
+CMAKE_GENERATOR:               # [win]
+  - NMake Makefiles            # [win]
 #
 # Go Compiler Options
 #
