we don't have numpy 1.14 on aarch64 or ppc64le

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -516,7 +516,8 @@ ntl:
   - 11.3.1
 # we build for the oldest version possible of numpy for forward compatibility
 numpy:
-  - 1.14
+  - 1.14       # [not (aarch64 or ppc64le)]
+  - 1.16       # [aarch64 or ppc64le]
 occt:
   - 7.3
 openblas:
