Pin libevent to 2.1.10 on aarch64 and ppc64le
No need to write a migrator as this will be covered by the Arch Migrator.

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -442,7 +442,8 @@ libcurl:
 libdap4:
   - 3.19
 libevent:
-  - 2.0.22
+  - 2.0.22   # [not (aarch64 or ppc64le)]
+  - 2.1.10   # [aarch64 or ppc64le]
 libffi:
   - 3.2
 libgdal:
