--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -308,7 +308,7 @@ pin_run_as_build:
   readline:
     max_pin: x
   r-base:
-    max_pin: x.x.x
+    max_pin: x.x
   snappy:
     max_pin: x.x.x
   sox:
@@ -542,7 +542,7 @@ qt:
 readline:
   - 8.0
 r_base:
-  - 3.5.1
+  - 3.6
 singular:
   - 4.1.2
 snappy:
