--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -309,6 +309,7 @@ pin_run_as_build:
     max_pin: x
   r-base:
     max_pin: x.x
+    min_pin: x.x
   snappy:
     max_pin: x.x.x
   sox:
@@ -542,7 +543,6 @@ qt:
 readline:
   - 8.0
 r_base:
-  - 3.5.1
   - 3.6
 singular:
   - 4.1.2
