--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -330,7 +330,8 @@ pin_run_as_build:
   xz:
     max_pin: x.x
   zeromq:
-    max_pin: x.x
+    max_pin: x.x  # [not win]
+    max_pin: x.x.x  # [win]
   zlib:
     max_pin: x.x
   zstd:
@@ -572,7 +573,7 @@ xerces_c:
 xz:
   - 5.2
 zeromq:
-  - 4.3.1
+  - 4.3.2
 zlib:
   - 1.2
 zstd:
