--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2019.07.10" %}
+{% set version = "2019.07.12" %}
 
 package:
   name: conda-forge-pinning
@@ -22,7 +22,7 @@ about:
   summary: The baseline versions of software for the conda-forge ecosystem
   license: BSD-3-Clause
   license_family: BSD
-  home: https://conda-forge.org/docs/meta.html#pinning-packages
+  home: https://conda-forge.org/docs/maintainer/infrastructure.html#conda-forge-pinning
 
 extra:
   recipe-maintainers:
