--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -47,8 +47,7 @@ fortran_compiler:              # [unix or win64]
   - flang                      # [win64]
 fortran_compiler_version:      # [unix or win64]
   - 2                          # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
-  - 4                          # [osx]
-  - 7                          # [linux64 or aarch64]
+  - 7                          # [linux64 or osx or aarch64]
   - 8                          # [ppc64le]
   - 5                          # [win64]
 m2w64_c_compiler:              # [win]
