MNT: Re-rendered with conda-build 3.18.7, conda-smithy 3.4.1, and conda-forge-pinning 2019.07.15

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,1 @@
-* @CJ-Wright
-* @isuruf
-* @jakirkham
-* @msarahan
-* @ocefpaf
-* @pelson
+* @CJ-Wright @isuruf @jakirkham @msarahan @ocefpaf @pelson
