--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -240,7 +240,7 @@ pin_run_as_build:
   librdkafka:
     max_pin: x.x.x
   librsvg:
-    max_pin: x.x
+    max_pin: x
   libspatialindex:
     max_pin: x.x
   libssh2:
@@ -462,7 +462,7 @@ libprotobuf:
 librdkafka:
   - 0.11.5
 librsvg:
-  - 2.44.14
+  - 2
 libsecret:
   - 0.18
 libspatialindex:
