--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -13,6 +13,7 @@ c_compiler:
   # non-standard arches get built with gcc
   - gcc                        # [aarch64]
   - gcc                        # [ppc64le]
+  - gcc                        # [armv7l]
 
   - vs2008                     # [win]
   - vs2015                     # [win]
@@ -21,7 +22,7 @@ c_compiler_version:            # [unix]
   - 2                          # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
   - 4                          # [osx]
   - 7                          # [linux64 or aarch64]
-  - 8                          # [ppc64le]
+  - 8                          # [ppc64le or armv7l]
 cxx_compiler:
   # legacy compilers for things that refuse to move
   - toolchain_cxx              # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
@@ -31,6 +32,7 @@ cxx_compiler:
 
   - gxx                        # [aarch64]
   - gxx                        # [ppc64le]
+  - gxx                        # [armv7l]
 
   - vs2008                     # [win]
   - vs2015                     # [win]
@@ -39,17 +41,17 @@ cxx_compiler_version:          # [unix]
   - 2                          # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
   - 4                          # [osx]
   - 7                          # [linux64 or aarch64]
-  - 8                          # [ppc64le]
+  - 8                          # [ppc64le or armv7l]
 fortran_compiler:              # [unix or win64]
   - toolchain_fort             # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
   - gfortran                   # [(linux64 or osx)]
-  - gfortran                   # [aarch64 or ppc64le]
+  - gfortran                   # [aarch64 or ppc64le or armv7l]
   - flang                      # [win64]
 fortran_compiler_version:      # [unix or win64]
   - 2                          # [(linux64 or osx) and (environ.get('CF_COMPILER_STACK') == 'comp4')]
   - 4                          # [osx]
   - 7                          # [linux64 or aarch64]
-  - 8                          # [ppc64le]
+  - 8                          # [ppc64le or armv7l]
   - 5                          # [win64]
 m2w64_c_compiler:              # [win]
   - m2w64-toolchain            # [win]
@@ -106,8 +108,9 @@ VERBOSE_CM:
 
 # dual build configuration
 channel_sources:
-  - conda-forge,defaults                        # [not aarch64]
+  - conda-forge,defaults                        # [not (aarch64 or armv7l)]
   - conda-forge,c4aarch64,defaults              # [aarch64]
+  - conda-forge,c4armv7l,defaults               # [armv7l]
   - conda-forge/label/cf201901,defaults         # [(linux64 or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp4')]
 
 channel_targets:
@@ -120,6 +123,7 @@ docker_image:                                   # [linux]
 
   - condaforge/linux-anvil-aarch64              # [aarch64]
   - condaforge/linux-anvil-ppc64le              # [ppc64le]
+  - condaforge/linux-anvil-armv7l               # [armv7l]
 
 build_number_decrement:                         # [(linux64 or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp4')]
   - 1000                                        # [(linux64 or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp4')]
@@ -150,6 +154,13 @@ zip_keys:
 cdt_arch: aarch64                       # [aarch64]
 cdt_name: cos7                          # [aarch64]
 BUILD: aarch64-conda_cos7-linux-gnu     # [aarch64]
+
+# armv7l specifics because conda-build sets many things to centos 6
+# this can probably be removed when conda-build gets updated defaults
+# for aarch64
+cdt_arch: armv7l                          # [armv7l]
+cdt_name: cos7                            # [armv7l]
+BUILD: armv7-conda_cos7-linux-gnueabihf   # [armv7l]
 
 # TODO: remove these when run_exports are added to the packages.
 pin_run_as_build:
