finish grpc_cpp migration

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -202,6 +202,8 @@ pin_run_as_build:
     max_pin: x
   graphviz:
     max_pin: x
+  grpc-cpp:
+    max_pin: x.x
   harfbuzz:
     max_pin: x
   hdf4:
@@ -421,6 +423,8 @@ gmp:
   - 6
 graphviz:
   - 2.40
+grpc_cpp:
+  - 1.23
 harfbuzz:
   - 2
 hdf4:
