Make the core team maintainers

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,9 +26,4 @@ about:
 
 extra:
   recipe-maintainers:
-    - isuruf
-    - jakirkham
-    - msarahan
-    - ocefpaf
-    - pelson
-    - CJ-Wright
+    - conda-forge/Core
