--- a/recipe/migrations/python38.yaml
+++ b/recipe/migrations/python38.yaml
@@ -2,6 +2,10 @@ migrator_ts: 1569538102   # The timestamp of when the migration was made
 __migrator: 
   kind: 
     version
+  exclude:
+    - c_compiler
+    - vc
+    - cxx_compiler
   migration_number:  # Only use this if the bot messes up, putting this in will cause a complete rerun of the migration
     1 
 
