Pin `cudnn` globally
The `cudnn` package shipped by `defaults` is batteries included. Though
it currently does not have `run_exports`. To establish some kind of
pinning for the `defaults` package of `cudnn` when used by other
packages, this sets the `cudnn` version to 7. Also it sets the `min_pin`
to respect forward and backward compatibility of the library at the
patch version. Finally as the library maintains backwards compatibility
for each major release, this sets `max_pin` to respect that.

ref: https://docs.nvidia.com/deeplearning/sdk/cudnn-developer-guide/index.html#programming-model

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -151,6 +151,9 @@ pin_run_as_build:
     max_pin: x
   cairo:
     max_pin: x.x
+  cudnn:
+    max_pin: x
+    min_pin: x.x
   curl:
     max_pin: x
   dbus:
@@ -356,6 +359,8 @@ cairo:
   - 1.16
 cfitsio:
   - 3.470
+cudnn:
+  - 7
 curl:
   - 7.64
 dbus:
