--- a/recipe/migrations/python38.yaml
+++ b/recipe/migrations/python38.yaml
@@ -8,6 +8,7 @@ __migrator:
     - cxx_compiler
   migration_number:  # Only use this if the bot messes up, putting this in will cause a complete rerun of the migration
     1 
+  bump_number: 0
 
 python:
   - 2.7
