--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -551,10 +551,11 @@ pixman:
   - 0.38
 poppler:
   - 0.67.0
+# once everything moves to the new name, proj, we can remove proj4
 proj4:
   - 6.1.1
 proj:
-  - 6.2.0
+  - 6.2.1
 python:
   - 2.7  # [not (aarch64 or ppc64le)]
   - 3.6
