--- a/recipe/migrations/grpccpp125.yaml
+++ b/recipe/migrations/grpccpp125.yaml
@@ -10,10 +10,10 @@ __migrator:
   # Only change the migration_number if the bot messes up,
   # changing this will cause a complete rerun of the migration
   migration_number:
-    1
+    2
   build_number:
     1
 # The name of the feedstock you wish to migrate
-grpc-cpp:
+grpc_cpp:
   - 1.25
 
