--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -48,6 +48,7 @@ cuda_compiler_version:         # [linux64]
   - 9.2                        # [linux64]
   - 10.0                       # [linux64]
   - 10.1                       # [linux64]
+  - 10.2                       # [linux64]
 
 _libgcc_mutex:
   - 0.1 conda_forge
@@ -118,6 +119,7 @@ docker_image:                                   # [linux]
   - condaforge/linux-anvil-cuda:9.2             # [linux64]
   - condaforge/linux-anvil-cuda:10.0            # [linux64]
   - condaforge/linux-anvil-cuda:10.1            # [linux64]
+  - condaforge/linux-anvil-cuda:10.2            # [linux64]
 
   - condaforge/linux-anvil-aarch64              # [aarch64]
   - condaforge/linux-anvil-ppc64le              # [ppc64le]
