--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -10,6 +10,7 @@ c_compiler:
   - vs2008                     # [win]
   - vs2015                     # [win]
   - vs2015                     # [win]
+  - vs2015                     # [win]
 c_compiler_version:            # [unix]
   - 9                          # [osx]
   - 7                          # [linux64 or aarch64]
@@ -18,6 +19,7 @@ cxx_compiler:
   - gxx                        # [linux]
   - clangxx                    # [osx]
   - vs2008                     # [win]
+  - vs2015                     # [win]
   - vs2015                     # [win]
   - vs2015                     # [win]
 cxx_compiler_version:          # [unix]
@@ -565,6 +567,7 @@ python:
   - 2.7  # [not (aarch64 or ppc64le)]
   - 3.6
   - 3.7
+  - 3.8
 qt:
   - 5.12
 readline:
@@ -603,6 +606,7 @@ tiledb:
   - 1.7.0
 vc:                    # [win]
   - 9                  # [win]
+  - 14                 # [win]
   - 14                 # [win]
   - 14                 # [win]
 vlfeat:
