--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -540,12 +540,12 @@ poppler:
 proj4:
   - 6.0.0
 python:
-  - 2.7
-  - 3.6
-  - 3.7
+  - 2.7  *_cpython
+  - 3.6  *_cpython
+  - 3.7  *_cpython
   # pypy only supports win32 so far
-  - pypy.3.6.7.1  # [unix or win32]
-  - pypy.2.7.7.1  # [unix or win32]
+  - 2.7  *_7_3_pypy  # [unix or win32]
+  - 3.6  *_7_3_pypy  # [unix or win32]
 pyqt:
   - 5.9
 qt:
