Add _cpython pinning to python

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -560,9 +560,9 @@ poppler:
 proj:
   - 6.3.0
 python:
-  - 2.7  # [not (aarch64 or ppc64le)]
-  - 3.6
-  - 3.7
+  - 2.7.* *_cpython  # [not (aarch64 or ppc64le)]
+  - 3.6.* *_cpython
+  - 3.7.* *_cpython
 qt:
   - 5.12
 readline:
