--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -108,7 +108,7 @@ VERBOSE_CM:
 # dual build configuration
 channel_sources:
   - conda-forge,defaults                        # [not (aarch64 or armv7l)]
-  - conda-forge,c4aarch64,defaults              # [aarch64]
+  - conda-forge                                 # [aarch64]
   - conda-forge,c4armv7l,defaults               # [armv7l]
 
 channel_targets:
