--- a/recipe/migrations/root620000.yaml
+++ b/recipe/migrations/root620000.yaml
@@ -3,7 +3,7 @@ __migrator:
   kind:
     version
   migration_number:
-    1
+    2
   build_number:
     1
 
@@ -11,5 +11,5 @@ root:
   - 6.20.0
 root_base:
   - 6.20.0
-root_binaries:
+root-binaries:
   - 6.20.0
