--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -153,6 +153,8 @@ BUILD: armv7-conda_cos7-linux-gnueabihf   # [armv7l]
 
 # TODO: remove these when run_exports are added to the packages.
 pin_run_as_build:
+  abseil-cpp:
+    max_pin: x.x
   arpack:
     max_pin: x.x.x
   boost:
@@ -349,6 +351,8 @@ blas_impl:
   - mkl          # [x86 or x86_64]
   - blis         # [x86 or x86_64]
 
+abseil-cpp:
+  - 20190808.0
 arb:
   - 2.17
 arpack:
