Update python pinning

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,10 @@ build:
   number: 3
   noarch: generic
   script:
-    - cp conda_build_config.yaml $PREFIX      # [unix]
+    - cp conda_build_config.yaml $PREFIX                       # [unix]
+    - mkdir -p $PREFIX/share/conda-forge/migrations            # [unix]
+    - cp migrations/* $PREFIX/share/conda-forge/migrations/    # [unix]
+    - rm $PREFIX/share/conda-forge/migrations/example.exyaml   # [unix]
     - copy conda_build_config.yaml %PREFIX%   # [win]
 
 test:
