--- a/recipe/migrations/python38.yaml
+++ b/recipe/migrations/python38.yaml
@@ -11,10 +11,10 @@ __migrator:
   bump_number: 0
 
 python:
-  - 2.7 *_cpython   # [not (aarch64 or ppc64le)]
-  - 3.6 *_cpython
-  - 3.7 *_cpython
-  - 3.8 *_cpython
+  - 2.7.* *_cpython   # [not (aarch64 or ppc64le)]
+  - 3.6.* *_cpython
+  - 3.7.* *_cpython
+  - 3.8.* *_cpython
 
 c_compiler:                    # [win]
   - vs2008                     # [win]
