BUG exclude cpython only package

--- a/recipe/migrations/pypy.yaml
+++ b/recipe/migrations/pypy.yaml
@@ -5,6 +5,8 @@ __migrator:
   migration_number:  # Only use this if the bot messes up, putting this in will cause a complete rerun of the migration
     1
   bump_number: 1   # Hashes changed for cpython, so it's better to bump build numbers.
+  exclude:
+    - fastcache
 
 python:
   - 2.7.* *_cpython   # [not (aarch64 or ppc64le)]
