Add numpy pinnings

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -127,9 +127,9 @@ docker_image:                                   # [linux]
 
 zip_keys:
   -
-    - qt
-  -
     - python
+    - numpy
+    - python_impl
     - vc                        # [win]
     - c_compiler                # [win]
     - cxx_compiler              # [win]
@@ -530,6 +530,10 @@ ntl:
 # we build for the oldest version possible of numpy for forward compatibility
 numpy:
   - 1.14       # [not (aarch64 or ppc64le)]
+  - 1.14       # [not (aarch64 or ppc64le)]
+  - 1.14       # [not (aarch64 or ppc64le)]
+  - 1.16       # [aarch64 or ppc64le]
+  - 1.16       # [aarch64 or ppc64le]
   - 1.16       # [aarch64 or ppc64le]
 occt:
   - 7.4
@@ -567,6 +571,10 @@ python:
   - 2.7.* *_cpython  # [not (aarch64 or ppc64le)]
   - 3.6.* *_cpython
   - 3.7.* *_cpython
+python_impl:
+  - cpython          # [not (aarch64 or ppc64le)]
+  - cpython
+  - cpython
 qt:
   - 5.12
 readline:
