--- a/recipe/migrations/pypy.yaml
+++ b/recipe/migrations/pypy.yaml
@@ -13,3 +13,21 @@ python:
   - 3.7.* *_cpython
   - 3.8.* *_cpython
   - 3.6.* *_73_pypy   # [not win64]
+
+numpy:
+  - 1.14       # [not (aarch64 or ppc64le)]
+  - 1.14       # [not (aarch64 or ppc64le)]
+  - 1.14       # [not (aarch64 or ppc64le)]
+  - 1.14       # [not (aarch64 or ppc64le)]
+  - 1.16       # [aarch64 or ppc64le]
+  - 1.16       # [aarch64 or ppc64le]
+  - 1.16       # [aarch64 or ppc64le]
+  - 1.16       # [aarch64 or ppc64le]
+  - 1.18       # [not win64]
+
+python_impl:
+  - cpython    # [not (aarch64 or ppc64le)]
+  - cpython
+  - cpython
+  - cpython
+  - pypy       # [not win64]
