--- a/recipe/migrations/python38.yaml
+++ b/recipe/migrations/python38.yaml
@@ -16,6 +16,22 @@ python:
   - 3.7.* *_cpython
   - 3.8.* *_cpython
 
+numpy:
+  - 1.14       # [not (aarch64 or ppc64le)]
+  - 1.14       # [not (aarch64 or ppc64le)]
+  - 1.14       # [not (aarch64 or ppc64le)]
+  - 1.14       # [not (aarch64 or ppc64le)]
+  - 1.16       # [aarch64 or ppc64le]
+  - 1.16       # [aarch64 or ppc64le]
+  - 1.16       # [aarch64 or ppc64le]
+  - 1.16       # [aarch64 or ppc64le]
+
+python_impl:
+  - cpython    # [not (aarch64 or ppc64le)]
+  - cpython
+  - cpython
+  - cpython
+
 c_compiler:                    # [win]
   - vs2008                     # [win]
   - vs2015                     # [win]
