--- a/recipe/migrations/pypy.yaml
+++ b/recipe/migrations/pypy.yaml
@@ -2,6 +2,12 @@ migrator_ts: 1580746218   # The timestamp of when the migration was made
 __migrator:
   kind:
     version
+  exclude:
+    - c_compiler
+    - vc
+    - cxx_compiler
+    - cuda_compiler_version
+    - docker_image
   migration_number:  # Only use this if the bot messes up, putting this in will cause a complete rerun of the migration
     1
   bump_number: 1   # Hashes changed for cpython, so it's better to bump build numbers.
@@ -31,3 +37,16 @@ python_impl:
   - cpython
   - cpython
   - pypy       # [not win64]
+
+
+zip_keys:
+  -
+    - python
+    - numpy
+    - python_impl
+    - vc                        # [win]
+    - c_compiler                # [win]
+    - cxx_compiler              # [win]
+  -                             # [linux64]
+    - cuda_compiler_version     # [linux64]
+    - docker_image              # [linux64]
