--- a/recipe/migrations/python38.yaml
+++ b/recipe/migrations/python38.yaml
@@ -6,6 +6,8 @@ __migrator:
     - c_compiler
     - vc
     - cxx_compiler
+    - cuda_compiler_version
+    - docker_image
   migration_number:  # Only use this if the bot messes up, putting this in will cause a complete rerun of the migration
     1 
   bump_number: 0
@@ -49,3 +51,15 @@ vc:                    # [win]
   - 14                 # [win]
   - 14                 # [win]
   - 14                 # [win]
+
+zip_keys:
+  -
+    - python
+    - numpy
+    - python_impl
+    - vc                        # [win]
+    - c_compiler                # [win]
+    - cxx_compiler              # [win]
+  -                             # [linux64]
+    - cuda_compiler_version     # [linux64]
+    - docker_image              # [linux64]
