--- a/recipe/migrations/root_base6202.yaml
+++ b/recipe/migrations/root_base6202.yaml
@@ -1,6 +1,8 @@
 __migrator:
   build_number: 1
   kind: version
+  exclude:
+    - root
   migration_number: 1
 migrator_ts: 1584431816.6031702
 root_base:
