--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,5 @@
-{% set version = datetime.datetime.utcnow().strftime('%Y.%m.%d.%H.%M.%S') %}
+{#% set version = datetime.datetime.utcnow().strftime('%Y.%m.%d.%H.%M.%S') %#}
+{% set version = '2020.03.24' %}
 
 package:
   name: conda-forge-pinning
@@ -8,7 +9,7 @@ source:
   path: .
 
 build:
-  number: 1
+  number: 0
   noarch: generic
   script:
     - cp conda_build_config.yaml $PREFIX                       # [unix]
