--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -404,6 +404,12 @@ glpk:
   - 4.65
 gmp:
   - 6
+google_cloud_cpp:
+  - 0.20
+google_cloud_cpp_common:
+  - 0.24
+googleapis_cpp:
+  - 0.7
 graphviz:
   - 2.40
 grpc_cpp:
@@ -438,6 +444,8 @@ libblitz:
   - 0.10
 libcurl:
   - 7.64
+libcrc32c:
+  - 1.1
 libdap4:
   - 3.20.2
 libevent:
