address the feedback.

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -585,8 +585,9 @@ sox:
   - 14.4.2
 sqlite:
   - 3
-suitesparse:           # [not win]
+suitesparse:
   - 5.6                # [not win]
+  - 5.1                # [win]
 tk:
   - 8.6                # [not ppc64le]
 tiledb:
