--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -127,6 +127,12 @@ zip_keys:
   -                             # [linux64]
     - cuda_compiler_version     # [linux64]
     - docker_image              # [linux64]
+  -
+    - petsc
+    - slepc
+  -
+    - boost
+    - boost_cpp
 
 # aarch64 specifics because conda-build sets many things to centos 6
 # this can probably be removed when conda-build gets updated defaults
