ENH opt-out for checking solvability

--- a/recipe/migrations/pypy.yaml
+++ b/recipe/migrations/pypy.yaml
@@ -11,6 +11,8 @@ __migrator:
   migration_number:  # Only use this if the bot messes up, putting this in will cause a complete rerun of the migration
     1
   bump_number: 1   # Hashes changed for cpython, so it's better to bump build numbers.
+  # do not use mamba to check if the issued PRs are solvable
+  check_solvable: false
 
 python:
   - 3.6.* *_cpython
