BUG automerge key

--- a/recipe/migrations/r400.yaml
+++ b/recipe/migrations/r400.yaml
@@ -11,11 +11,12 @@ __migrator:
   # changing this will cause a complete rerun of the migration
   migration_number:
     1
-  # This determines the increment to the build number when the 
-  # migration runs. 
+  # This determines the increment to the build number when the
+  # migration runs.
   # Change this to zero if the new pin increases the number of builds
   build_number:
     1
+  automerge: true
 
 # The name of the feedstock you wish to migrate with dashes replaced by
 # underscores
