ENH pause R so we can restart the bot

--- a/recipe/migrations/r400.yaml
+++ b/recipe/migrations/r400.yaml
@@ -23,8 +23,11 @@ __migrator:
     provider.linux_ppc64le: azure
 
   # open it up a bit
-  pr_limit: 25
-  
+  pr_limit: 5
+
+  # pause it
+  paused: true
+
   # include noarch packages
   include_noarch: True
 
