Add windows compatible jasper pin

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -423,7 +423,9 @@ icu:
 isl:
   - 0.19
 jasper:
-  - 1.900.1
+  # the first windows build of jasper was 2.0.14
+  - 1.900.1  # [not win]
+  - 2.0.14   # [win]
 jpeg:
   - 9
 libjpeg_turbo:
