added windows specific graphviz pin

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -411,7 +411,8 @@ google_cloud_cpp_common:
 googleapis_cpp:
   - '0.10'
 graphviz:
-  - 2.40
+  - 2.38  # [win]
+  - 2.40  # [not win]
 grpc_cpp:
   - '1.30'
 harfbuzz:
