--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -39,8 +39,8 @@ CMAKE_GENERATOR:               # [win]
 
 cuda_compiler:                 # [linux64]
   - nvcc                       # [linux64]
-cuda_compiler_version:         # [linux64]
-  - None                       # [linux64]
+cuda_compiler_version:
+  - None
   - 9.2                        # [linux64]
   - 10.0                       # [linux64]
   - 10.1                       # [linux64]
@@ -110,23 +110,23 @@ channel_sources:
 channel_targets:
   - conda-forge main
 
-docker_image:                                   # [linux]
-  - condaforge/linux-anvil-comp7                # [linux64]
-  - condaforge/linux-anvil-cuda:9.2             # [linux64]
-  - condaforge/linux-anvil-cuda:10.0            # [linux64]
-  - condaforge/linux-anvil-cuda:10.1            # [linux64]
-  - condaforge/linux-anvil-cuda:10.2            # [linux64]
+docker_image:                           # [(os.environ.get("CONFIG_VERSION", "1") == "1" and linux) or os.environ.get("BUILD_PLATFORM", "").startswith("linux")]
+  - condaforge/linux-anvil-comp7        # [(os.environ.get("CONFIG_VERSION", "1") == "1" and linux64) or os.environ.get("BUILD_PLATFORM") == "linux-64"]
+  - condaforge/linux-anvil-cuda:9.2     # [linux64 and (os.environ.get("CONFIG_VERSION", "1") == "1" or os.environ.get("BUILD_PLATFORM") == "linux-64")]
+  - condaforge/linux-anvil-cuda:10.0    # [linux64 and (os.environ.get("CONFIG_VERSION", "1") == "1" or os.environ.get("BUILD_PLATFORM") == "linux-64")]
+  - condaforge/linux-anvil-cuda:10.1    # [linux64 and (os.environ.get("CONFIG_VERSION", "1") == "1" or os.environ.get("BUILD_PLATFORM") == "linux-64")]
+  - condaforge/linux-anvil-cuda:10.2    # [linux64 and (os.environ.get("CONFIG_VERSION", "1") == "1" or os.environ.get("BUILD_PLATFORM") == "linux-64")]
 
-  - condaforge/linux-anvil-aarch64              # [aarch64]
-  - condaforge/linux-anvil-ppc64le              # [ppc64le]
-  - condaforge/linux-anvil-armv7l               # [armv7l]
+  - condaforge/linux-anvil-aarch64      # [(os.environ.get("CONFIG_VERSION", "1") == "1" and aarch64) or os.environ.get("BUILD_PLATFORM") == "linux-aarch64"]
+  - condaforge/linux-anvil-ppc64le      # [(os.environ.get("CONFIG_VERSION", "1") == "1" and ppc64le) or os.environ.get("BUILD_PLATFORM") == "linux-ppc64le"]
+  - condaforge/linux-anvil-armv7l       # [(os.environ.get("CONFIG_VERSION", "1") == "1" and armv7l ) or os.environ.get("BUILD_PLATFORM") == "linux-armv7l"]
 
 zip_keys:
   -
     - python
-  -                             # [linux64]
-    - cuda_compiler_version     # [linux64]
-    - docker_image              # [linux64]
+  -                             # [(os.environ.get("CONFIG_VERSION", "1") == "1" and linux64) or os.environ.get("BUILD_PLATFORM") == "linux-64"]
+    - cuda_compiler_version     # [(os.environ.get("CONFIG_VERSION", "1") == "1" and linux64) or os.environ.get("BUILD_PLATFORM") == "linux-64"]
+    - docker_image              # [(os.environ.get("CONFIG_VERSION", "1") == "1" and linux64) or os.environ.get("BUILD_PLATFORM") == "linux-64"]
 
 # aarch64 specifics because conda-build sets many things to centos 6
 # this can probably be removed when conda-build gets updated defaults
