--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -110,16 +110,16 @@ channel_sources:
 channel_targets:
   - conda-forge main
 
-docker_image:                           # [(os.environ.get("CONFIG_VERSION", "1") == "1" and linux) or os.environ.get("BUILD_PLATFORM", "").startswith("linux")]
-  - condaforge/linux-anvil-comp7        # [(os.environ.get("CONFIG_VERSION", "1") == "1" and linux64) or os.environ.get("BUILD_PLATFORM") == "linux-64"]
-  - condaforge/linux-anvil-cuda:9.2     # [linux64 and (os.environ.get("CONFIG_VERSION", "1") == "1" or os.environ.get("BUILD_PLATFORM") == "linux-64")]
-  - condaforge/linux-anvil-cuda:10.0    # [linux64 and (os.environ.get("CONFIG_VERSION", "1") == "1" or os.environ.get("BUILD_PLATFORM") == "linux-64")]
-  - condaforge/linux-anvil-cuda:10.1    # [linux64 and (os.environ.get("CONFIG_VERSION", "1") == "1" or os.environ.get("BUILD_PLATFORM") == "linux-64")]
-  - condaforge/linux-anvil-cuda:10.2    # [linux64 and (os.environ.get("CONFIG_VERSION", "1") == "1" or os.environ.get("BUILD_PLATFORM") == "linux-64")]
+docker_image:                           # [os.environ.get("BUILD_PLATFORM", "").startswith("linux") or (os.environ.get("CONFIG_VERSION", "1") == "1" and linux)]
+  - condaforge/linux-anvil-comp7        # [os.environ.get("BUILD_PLATFORM") == "linux-64" or (os.environ.get("CONFIG_VERSION", "1") == "1" and linux64)]
+  - condaforge/linux-anvil-aarch64      # [os.environ.get("BUILD_PLATFORM") == "linux-aarch64" or (os.environ.get("CONFIG_VERSION", "1") == "1" and aarch64)]
+  - condaforge/linux-anvil-ppc64le      # [os.environ.get("BUILD_PLATFORM") == "linux-ppc64le" or (os.environ.get("CONFIG_VERSION", "1") == "1" and ppc64le)]
+  - condaforge/linux-anvil-armv7l       # [os.environ.get("BUILD_PLATFORM") == "linux-armv7l" or (os.environ.get("CONFIG_VERSION", "1") == "1" and armv7l)]
 
-  - condaforge/linux-anvil-aarch64      # [(os.environ.get("CONFIG_VERSION", "1") == "1" and aarch64) or os.environ.get("BUILD_PLATFORM") == "linux-aarch64"]
-  - condaforge/linux-anvil-ppc64le      # [(os.environ.get("CONFIG_VERSION", "1") == "1" and ppc64le) or os.environ.get("BUILD_PLATFORM") == "linux-ppc64le"]
-  - condaforge/linux-anvil-armv7l       # [(os.environ.get("CONFIG_VERSION", "1") == "1" and armv7l ) or os.environ.get("BUILD_PLATFORM") == "linux-armv7l"]
+  - condaforge/linux-anvil-cuda:9.2     # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
+  - condaforge/linux-anvil-cuda:10.0    # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
+  - condaforge/linux-anvil-cuda:10.1    # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
+  - condaforge/linux-anvil-cuda:10.2    # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
 
 zip_keys:
   -
