--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -9,7 +9,8 @@ c_compiler:
   - clang                      # [osx]
   - vs2017                     # [win]
 c_compiler_version:            # [unix]
-  - 10                         # [osx]
+  - 11                         # [osx and arm64]
+  - 10                         # [osx and x86_64]
   - 7                          # [linux64 or aarch64]
   - 8                          # [ppc64le or armv7l]
 cxx_compiler:
@@ -17,15 +18,16 @@ cxx_compiler:
   - clangxx                    # [osx]
   - vs2017                     # [win]
 cxx_compiler_version:          # [unix]
-  - 10                         # [osx]
+  - 11                         # [osx and arm64]
+  - 10                         # [osx and x86_64]
   - 7                          # [linux64 or aarch64]
   - 8                          # [ppc64le or armv7l]
 fortran_compiler:              # [unix or win64]
-  - gfortran                   # [(linux64 or osx)]
+  - gfortran                   # [linux64 or (osx and x86_64)]
   - gfortran                   # [aarch64 or ppc64le or armv7l]
   - flang                      # [win64]
 fortran_compiler_version:      # [unix or win64]
-  - 7                          # [linux64 or osx or aarch64]
+  - 7                          # [linux64 or (osx and x86_64) or aarch64]
   - 8                          # [ppc64le or armv7l]
   - 5                          # [win64]
 m2w64_c_compiler:              # [win]
@@ -89,11 +91,13 @@ rust_compiler_version:
 
 
 macos_min_version:             # [osx]
-  - 10.9                       # [osx]
+  - 11.0                       # [osx and arm64]
+  - 10.9                       # [osx and x86_64]
 macos_machine:                 # [osx]
-  - x86_64-apple-darwin13.4.0  # [osx]
+  - x86_64-apple-darwin13.4.0  # [osx and x86_64]
 MACOSX_DEPLOYMENT_TARGET:      # [osx]
-  - 10.9                       # [osx]
+  - 11.0                       # [osx and arm64]
+  - 10.9                       # [osx and x86_64]
 target_platform:               # [win]
   - win-64                     # [win]
 VERBOSE_AT:
