--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -95,6 +95,7 @@ macos_min_version:             # [osx]
   - 10.9                       # [osx and x86_64]
 macos_machine:                 # [osx]
   - x86_64-apple-darwin13.4.0  # [osx and x86_64]
+  - arm64-apple-macos11        # [osx and arm64]
 MACOSX_DEPLOYMENT_TARGET:      # [osx]
   - 11.0                       # [osx and arm64]
   - 10.9                       # [osx and x86_64]
@@ -107,7 +108,8 @@ VERBOSE_CM:
 
 # dual build configuration
 channel_sources:
-  - conda-forge,defaults                        # [not (aarch64 or armv7l)]
+  - conda-forge,defaults                        # [not (aarch64 or armv7l or (osx and arm64))]
+  - conda-forge/label/llvm_rc,conda-forge       # [not (aarch64 or armv7l or (osx and arm64))]
   - conda-forge                                 # [aarch64]
   - conda-forge,c4armv7l,defaults               # [armv7l]
 
