Change macos_machine for macos arm64

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -95,7 +95,7 @@ macos_min_version:             # [osx]
   - 10.9                       # [osx and x86_64]
 macos_machine:                 # [osx]
   - x86_64-apple-darwin13.4.0  # [osx and x86_64]
-  - arm64-apple-macos11        # [osx and arm64]
+  - arm64-apple-darwin20.0.0   # [osx and arm64]
 MACOSX_DEPLOYMENT_TARGET:      # [osx]
   - 11.0                       # [osx and arm64]
   - 10.9                       # [osx and x86_64]
