No pypy for osx arm64

--- a/recipe/migrations/pypy.yaml
+++ b/recipe/migrations/pypy.yaml
@@ -18,19 +18,19 @@ python:
   - 3.6.* *_cpython
   - 3.7.* *_cpython
   - 3.8.* *_cpython
-  - 3.6.* *_73_pypy   # [not win64]
+  - 3.6.* *_73_pypy   # [not (win64 or (osx and arm64))]
 
 numpy:
   - 1.16
   - 1.16
   - 1.16
-  - 1.18       # [not win64]
+  - 1.18       # [not (win64 or (osx and arm64))]
 
 python_impl:
   - cpython
   - cpython
   - cpython
-  - pypy       # [not win64]
+  - pypy       # [not (win64 or (osx and arm64))]
 
 
 zip_keys:
