skip python 3.6, 3.7 for osx-arm64

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -567,8 +567,8 @@ poppler:
 proj:
   - 7.1.0
 python:
-  - 3.6.* *_cpython
-  - 3.7.* *_cpython
+  - 3.6.* *_cpython    # [not (osx and arm64)]
+  - 3.7.* *_cpython    # [not (osx and arm64)]
   - 3.8.* *_cpython
 python_impl:
   - cpython
