--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -523,10 +523,14 @@ netcdf_fortran:
   - 4.5
 nettle:
   - 3.4
+# nss: aarch64 and ppc64le do not have builds for versions prior to 3.47
 nss:
-  - 3
+  - 3.39   # [not (aarch64 or ppc64le)]
+  - 3.47   # [aarch64 or ppc64le]
+# nspr: aarch64 and ppc64le do not have builds for versions prior to 4.24
 nspr:
-  - 4
+  - 4.20   # [not (aarch64 or ppc64le)]
+  - 4.24   # [aarch64 or ppc64le]
 nlopt:
   - 2.6.*
 ntl:
