--- a/recipe/migrations/boost_cpp1740.yaml
+++ b/recipe/migrations/boost_cpp1740.yaml
@@ -4,4 +4,8 @@ __migrator:
   migration_number: 1
 boost_cpp:
 - 1.74.0
+- 1.72.0   # [not (osx and arm64)]
+boost:
+- 1.74.0
+- 1.72.0   # [not (osx and arm64)]
 migrator_ts: 1599847606.929981
