--- a/recipe/migrations/gcc930.yaml
+++ b/recipe/migrations/gcc930.yaml
@@ -7,6 +7,7 @@ __migrator:
   build_number: 1
   override_cbc_keys:
     - fortran_compiler_stub
+  paused: True
 
 c_compiler_version:            # [unix]
   - 11                         # [osx and arm64]
