ENH open up the python39 migration

--- a/recipe/migrations/python39.yaml
+++ b/recipe/migrations/python39.yaml
@@ -11,6 +11,7 @@ __migrator:
             - 3.9.* *_cpython   # new entry
             - 3.6.* *_73_pypy
     paused: false
+    pr_limit: 50
 python:
   - 3.9.* *_cpython
 # additional entries to add for zip_keys
