Exclude python from the python migration because python

--- a/recipe/migrations/python39.yaml
+++ b/recipe/migrations/python39.yaml
@@ -11,6 +11,10 @@ __migrator:
             - 3.9.* *_cpython   # new entry
             - 3.6.* *_73_pypy
     paused: false
+    exclude:
+      # this shouldn't attempt to modify the python feedstocks
+      - python
+      - pypy3.6
 python:
   - 3.9.* *_cpython
 # additional entries to add for zip_keys
