--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -424,7 +424,9 @@ giflib:
 glew:
   - 2.1
 glib:
-  - 2.58
+  - 2.58  # [not (osx and arm64)]
+  # Can't update to 2.66 on osx-64 yet because that requires a newer macOS version than 10.9
+  - 2.66  # [osx and arm64]
 glog:
   - 0.4.0
 glpk:
