clang 11 on macos

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -9,8 +9,7 @@ c_compiler:
   - clang                      # [osx]
   - vs2017                     # [win]
 c_compiler_version:            # [unix]
-  - 11                         # [osx and arm64]
-  - 10                         # [osx and x86_64]
+  - 11                         # [osx]
   - 7                          # [linux64]
   - 7                          # [aarch64]
   - 8                          # [ppc64le]
@@ -20,8 +19,7 @@ cxx_compiler:
   - clangxx                    # [osx]
   - vs2017                     # [win]
 cxx_compiler_version:          # [unix]
-  - 11                         # [osx and arm64]
-  - 10                         # [osx and x86_64]
+  - 11                         # [osx]
   - 7                          # [linux64]
   - 7                          # [aarch64]
   - 8                          # [ppc64le]
