issue all PRs for gcc 9

--- a/recipe/migrations/gcc930.yaml
+++ b/recipe/migrations/gcc930.yaml
@@ -9,6 +9,7 @@ __migrator:
     - fortran_compiler_stub
   paused: false
   longterm: True
+  check_solvable: false
 
 c_compiler_version:            # [unix]
   - 11                         # [osx and arm64]
