Remove conda-web as the CDN is working on osx-arm64 now

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -108,7 +108,7 @@ VERBOSE_CM:
 # dual build configuration
 channel_sources:
   - conda-forge,defaults                        # [not (aarch64 or armv7l or (osx and arm64))]
-  - conda-forge/label/rust_dev,conda-forge,https://conda-web.anaconda.org/conda-forge    # [osx and arm64]
+  - conda-forge/label/rust_dev,conda-forge      # [osx and arm64]
   - conda-forge                                 # [aarch64]
   - conda-forge,c4armv7l,defaults               # [armv7l]
 
