--- a/recipe/migrations/glib2646.yaml
+++ b/recipe/migrations/glib2646.yaml
@@ -7,9 +7,9 @@ __migrator:
   build_number:
     1
 
+# see discussionas to why the name of the migration doesn't match the pin
+# https://github.com/conda-forge/conda-forge-pinning-feedstock/issues/1026
 glib:
-  - 2.64.6  # [not (osx and arm64)]
-  - 2.66    # [osx and arm64]
+  - 2
 libglib:
-  - 2.64.6  # [not (osx and arm64)]
-  - 2.66    # [osx and arm64]
+  - 2
