Use a newer perl on osx-arm64

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -583,7 +583,8 @@ pango:
 pari:
   - 2.11
 perl:
-  - 5.26.2
+  - 5.26.2  # [not (osx and arm64)]
+  - 5.32.0  # [osx and arm64]
 petsc:
   - '3.13'
 petsc4py:
