don't check solvable for windows_cuda

--- a/recipe/migrations/windows_cuda.yaml
+++ b/recipe/migrations/windows_cuda.yaml
@@ -8,6 +8,7 @@ __migrator:
     1
   override_cbc_keys:
     - cuda_compiler_stub
+  check_solvable: false
 
 cuda_compiler:                 # [linux64 or win]
   - nvcc                       # [linux64 or win]
